logica de botones

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
                 </li>
 
                 <li class="choose">
-                    <butto id="bFreddy">
+                    <butto id="bFredy">
                         <img src="/media/Fredypic.PNG">
                     </button>
                 </li>
